--- a/mod2_solution/module2-solution/css/style.css
+++ b/mod2_solution/module2-solution/css/style.css
@@ -1,1 +1,80 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
+body {
+  font-family: Arial, sans-serif;
+}
+
+.container {
+  width: 95%;
+  margin: auto;
+  overflow: hidden;
+}
+
+h1 {
+  text-align: center;
+  margin: 30px 0;
+  font-size: 1.75em;
+}
+
+.menu-item {
+  background-color: #ddd; /* Replace with your chosen color */
+  border: 1px solid #000;
+  margin-bottom: 15px;
+  padding: 10px;
+  position: relative;
+}
+
+.menu-title {
+  background-color: #aaa; /* Replace with your chosen color */
+  border: 1px solid #000;
+  padding: 5px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: auto;
+}
+
+p {
+  margin-top: 50px; /* Space for the title */
+}
+
+/* Responsive Grid */
+.col-lg-4, .col-md-6, .col-sm-12 {
+  float: left;
+  padding: 15px;
+}
+
+@media (min-width: 992px) {
+  .col-lg-4 {
+    width: 33.33333%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
+}
+
+@media (max-width: 767px) {
+  .col-sm-12 {
+    width: 100%;
+  }
+}
+
+/* Spacing and Typography Adjustments */
+.menu-item p {
+  padding: 15px;
+  font-size: 0.875em;
+}
+
+.menu-title {
+  font-size: 1.25em;
+}
