--- a/mod2_solution/module2-solution/css/style.css
+++ b/mod2_solution/module2-solution/css/style.css
@@ -1,95 +1,46 @@
-/* Base styles */
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
 }
-
-/* Container for sections */
 .box {
-  max-width: 700px;
-  margin: auto; /* Center the box */
+    width: 700px
 }
-
-/* Main heading */
 h1 {
-  text-align: center;
-  padding: 20px;
+    text-align: center;
+    padding: 20px;
 }
-
-/* Section title */
 h4 {
-  margin: 0;
-  padding: 5px;
-  border: 1px solid black;
-  border-top: none;
-  position: absolute;
-  top: 0;
-  right: 0;
+    margin: 0px;
+    padding: 5px;
+    border: 1px solid black;
+    border-top: 0px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
 }
-
-/* Paragraph text */
 p {
-  color: #4cae4c;
-  padding: 50px 17px 10px;
+    color: #4cae4c;
+    padding: 50px 17px 10px 17px;
 }
-
-/* Section backgrounds */
 .backgroud-1 {
-  background-color: #0081ff;
+    background-color: #0081ff;
 }
-
 .backgroud-2 {
-  background-color: #00ff4b;
+    background-color: #00ff4b;
 }
-
 .backgroud-3 {
-  background-color: #ff0062;
-  color: #ffffff;
+    background-color: #ff0062;
+    color: #ffffff;
 }
-
-/* Section styling */
 .p-section {
-  height: 250px;
-  background-color: #3e2723;
-  border: 1px solid black;
-  margin-bottom: 30px;
-  position: relative;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    height: 250px;
+    background-color: #3e2723;
+    border: 1px solid black;
+    margin-bottom: 30px;
+    position: relative;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-
-/* Desktop styles */
-@media (min-width: 992px) {
-  .p-section {
-    /* Example: 3 sections in a row */
-    width: calc(33.333% - 20px); /* Adjusting for margin and padding */
-    float: left;
-    margin-right: 30px;
-  }
-  .p-section:last-child {
-    margin-right: 0; /* Remove margin for the last element */
-  }
-}
-
-/* Tablet styles */
-@media (min-width: 768px) and (max-width: 991px) {
-  .p-section {
-    /* Example: 2 sections in a row */
-    width: calc(50% - 20px); /* Adjusting for margin and padding */
-    float: left;
-    margin-right: 30px;
-  }
-  .p-section:nth-child(2n) {
-    margin-right: 0; /* Remove margin from every second element */
-  }
-}
-
-/* Mobile styles */
-@media (max-width: 767px) {
-  .p-section {
-    /* Each section takes full width */
-    width: 100%;
-  }
 }
   font-size: 1.25em;
 }
