--- a/mod2_solution/module2-solution/css/style.css
+++ b/mod2_solution/module2-solution/css/style.css
@@ -1,73 +1,44 @@
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
 }
-
-.container {
-  max-width: 700px; 
-  margin: auto;
-  padding: 0 10px;
+.box {
+    width: 700px
 }
-
 h1 {
-  text-align: center;
-  padding: 20px;
+    text-align: center;
+    padding: 20px;
 }
-
-.menu-item {
-  background-color: #ddd; /* Grey background for the content area */
-  border: 1px solid black;
-  margin-bottom: 15px;
-  padding: 10px;
-  position: relative;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+h4 {
+    margin: 0px;
+    padding: 5px;
+    border: 1px solid black;
+    border-top: 0px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
 }
-
-.menu-title {
-  padding: 5px;
-  position: absolute;
-  right: 0;
-  top: 0;
-  color: black; /* Text color for titles */
-}
-
-/* Colors for titles */
-.menu-item:nth-of-type(1) .menu-title {
-  background-color: #ffc0cb; /* Pink background for Chicken */
-}
-
-.menu-item:nth-of-type(2) .menu-title {
-  background-color: #ff0000; /* Red background for Beef */
-}
-
-.menu-item:nth-of-type(3) .menu-title {
-  background-color: #ffff99; /* Light yellow background for Sushi */
-}
-
 p {
-  color: black; /* Black text color for content */
-  padding: 50px 17px 10px 17px; /* Space for the title */
+    color: #4cae4c;
+    padding: 50px 17px 10px 17px;
+}
+.backgroud-1 {
+    background-color: #0081ff;
+}
+.backgroud-2 {
+    background-color: #00ff4b;
+}
+.backgroud-3 {
+    background-color: #ff0062;
+    color: #ffffff;
+}
+.p-section {
+    height: 250px;
+    background-color: #3e2723;
+    border: 1px solid black;
+    margin-bottom: 30px;
+    position: relative;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-/* Responsive styles as previously defined */
-@media (min-width: 992px) {
-  /* Desktop styles */
-  .p-section {
-    /* Styles for desktop */
-  }
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-  /* Tablet styles */
-  .p-section {
-    /* Styles for tablet */
-  }
-}
-
-@media (max-width: 767px) {
-  /* Mobile styles */
-  .p-section {
-    /* Styles for mobile */
-  }
-}
