--- a/mod2_solution/module2-solution/css/style.css
+++ b/mod2_solution/module2-solution/css/style.css
@@ -20,15 +20,15 @@ h4 {
     margin: 0;
     padding: 5px;
     border: 1px solid black;
-    border-top: none; /* Removed '0px' to use 'none' */
+    border-top: 0px; 
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 0px;
+    right: 0px;
 }
 
 /* Text within each section */
 p {
-    color: black; /* Changed color to black */
+    color: #000000; /* Changed color to black */
     padding: 50px 17px 10px 17px;
 }
 
