--- a/mod2_solution/module2-solution/css/style.css
+++ b/mod2_solution/module2-solution/css/style.css
@@ -1,10 +1,3 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-/* Assuming .box is a container for the sections, if it's not used, you can remove this */
 .box {
     width: 700px;
     margin: auto; /* Center the box */
@@ -15,44 +8,48 @@ h1 {
     padding: 20px;
 }
 
-/* Titles for each section */
 h4 {
     margin: 0;
     padding: 5px;
     border: 1px solid black;
-    border-top: 0px; 
     position: absolute;
-    top: 0px;
-    right: 0px;
+    top: 0;
+    right: 0;
 }
 
-/* Text within each section */
 p {
-    color: #000000; /* Changed color to black */
+    color: #000000; /* Text color set to black */
     padding: 50px 17px 10px 17px;
 }
 
-/* Background colors for the titles */
-/* Corrected class name spelling from 'backgroud' to 'background' */
 .background-1 {
     background-color: #ffc0cb; /* Pink color for Chicken */
 }
 
 .background-2 {
     background-color: #ff0000; /* Red color for Beef */
+    /* If the Beef title text should be white, it should be specified in the .menu-title CSS or similar */
 }
 
 .background-3 {
     background-color: #ffff99; /* Light yellow color for Sushi */
-    color: black; /* Changed text color to black for readability */
 }
 
-/* Section styling */
 .p-section {
     height: 250px;
-    background-color: #ddd; /* Changed to grey background for the text sections */
+    background-color: #ddd; /* Grey background for the sections */
     border: 1px solid black;
     margin-bottom: 30px;
-    position: relative;
+    position: relative; /* Needed for the absolute positioning of the title */
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+/* Add this to change the Beef title text color to white */
+.background-2 h4 {
+    color: #ffffff; /* White text color for Beef section title */
+}
+
+/* Add this if you want the Beef paragraph text to be white */
+.background-2 p {
+    color: #ffffff; /* White text color for Beef section content */
 }
