--- a/mod2_solution/module2-solution/css/style.css
+++ b/mod2_solution/module2-solution/css/style.css
@@ -1,55 +1,57 @@
-.box {
-    width: 700px;
-    margin: auto; /* Center the box */
+* {
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
 }
-
+.box {
+    width: 700px
+}
 h1 {
     text-align: center;
     padding: 20px;
 }
-
 h4 {
-    margin: 0;
+    margin: 0px;
     padding: 5px;
     border: 1px solid black;
+    border-top: 0px;
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 0px;
+    right: 0px;
 }
-
 p {
-    color: #000000; /* Text color set to black */
+    color: #4cae4c;
     padding: 50px 17px 10px 17px;
 }
-
-.background-1 {
-    background-color: #ffc0cb; /* Pink color for Chicken */
+.backgroud-1 {
+    background-color: #0081ff;
 }
-
-.background-2 {
-    background-color: #ff0000; /* Red color for Beef */
-    /* If the Beef title text should be white, it should be specified in the .menu-title CSS or similar */
+.backgroud-2 {
+    background-color: #00ff4b;
 }
-
-.background-3 {
-    background-color: #ffff99; /* Light yellow color for Sushi */
+.backgroud-3 {
+    background-color: #ff0062;
+    color: #ffffff;
 }
-
 .p-section {
     height: 250px;
-    background-color: #ddd; /* Grey background for the sections */
+    background-color: #3e2723;
     border: 1px solid black;
     margin-bottom: 30px;
-    position: relative; /* Needed for the absolute positioning of the title */
+    position: relative;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+/*
+!**************** Desktop *******************!
+@media (min-width: 992px) {
 
-/* Add this to change the Beef title text color to white */
-.background-2 h4 {
-    color: #ffffff; /* White text color for Beef section title */
 }
+!**************** Tablet *******************!
+@media (min-width: 768px) and (max-width: 991px) {
 
-/* Add this if you want the Beef paragraph text to be white */
-.background-2 p {
-    color: #ffffff; /* White text color for Beef section content */
 }
+!**************** Mobile *******************!
+@media (max-width: 767px) {
+
+}
+*/
