--- a/mod2_solution/module2-solution/css/style.css
+++ b/mod2_solution/module2-solution/css/style.css
@@ -1,57 +1,54 @@
 * {
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-.box {
-    width: 700px
+
+.container {
+  max-width: 1200px; /* Adjusted to the common container width */
+  margin: auto;
+  padding: 20px;
 }
+
 h1 {
-    text-align: center;
-    padding: 20px;
+  text-align: center;
+  margin-bottom: 30px; /* Add some bottom margin to separate from the content below */
 }
-h4 {
-    margin: 0px;
-    padding: 5px;
-    border: 1px solid black;
-    border-top: 0px;
-    position: absolute;
-    top: 0px;
-    right: 0px;
+
+.menu-section {
+  background-color: #ddd; /* Grey background for each section */
+  border: 1px solid black;
+  margin-bottom: 15px; /* Add some bottom margin to separate the sections */
+  position: relative; /* For the absolute positioning of the title */
+  padding: 40px 20px 20px; /* Padding to make space for the title box */
 }
+
+.menu-title {
+  position: absolute;
+  top: -1px; /* Align it with the top border of the section */
+  right: -1px; /* Align it with the right border of the section */
+  padding: 5px;
+  border: 1px solid black;
+  border-bottom: none; /* Assuming there's no bottom border in the title box */
+}
+
+/* Specific styles for each title */
+.menu-section.chicken .menu-title {
+  background-color: #ffc0cb; /* Light pink background for Chicken */
+  color: black; /* Black text */
+}
+
+.menu-section.beef .menu-title {
+  background-color: #ff0000; /* Red background for Beef */
+  color: white; /* White text */
+}
+
+.menu-section.sushi .menu-title {
+  background-color: #ffff99; /* Light yellow background for Sushi */
+  color: black; /* Black text */
+}
+
+/* Text content */
 p {
-    color: #4cae4c;
-    padding: 50px 17px 10px 17px;
+  color: black; /* Black text for content */
 }
-.backgroud-1 {
-    background-color: #0081ff;
-}
-.backgroud-2 {
-    background-color: #00ff4b;
-}
-.backgroud-3 {
-    background-color: #ff0062;
-    color: #ffffff;
-}
-.p-section {
-    height: 250px;
-    background-color: #3e2723;
-    border: 1px solid black;
-    margin-bottom: 30px;
-    position: relative;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-/*
-!**************** Desktop *******************!
-@media (min-width: 992px) {
-
-}
-!**************** Tablet *******************!
-@media (min-width: 768px) and (max-width: 991px) {
-
-}
-!**************** Mobile *******************!
-@media (max-width: 767px) {
-
-}
-*/
