--- a/mod2_solution/module2-solution/css/style.css
+++ b/mod2_solution/module2-solution/css/style.css
@@ -48,7 +48,7 @@ h1 {
   color: black; /* Black text */
 }
 
-/* Text content */
 p {
-  color:  #000000; /* Black text for content */
+  color: #000000; /* Black text color */
+  padding: 50px 17px 10px 17px;
 }
