--- a/mod2_solution/module2-solution/css/style.css
+++ b/mod2_solution/module2-solution/css/style.css
@@ -1,59 +1,103 @@
+
 * {
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
+  box-sizing: border-box;
 }
-.box {
-    width: 700px
+
+body{
+	margin: 0;
+	padding: 0;
+  font-family: "Comic Sans MS", cursive, sans-serif;
 }
+
+.row{
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
 h1 {
-    text-align: center;
-    padding: 20px;
+  margin-bottom: 15px;
+  text-align: center;
+  color: #ff4532;
+  font-size: 50px;
 }
-h4 {
-    margin: 0px;
-    padding: 5px;
-    border: 1px solid black;
-    border-top: 0px;
-    position: absolute;
-    top: 0px;
-    right: 0px;
+
+
+.box{
+  width: 100%;
+  overflow: none;
 }
-p {
-    color: #4cae4c;
-    padding: 50px 17px 10px 17px;
+
+
+.content-name{
+  overflow: none;
+  text-align: center;
+  border: 4px solid black;
+  width: 100px;
+  height: 40px;
+  padding: 5px;
+  float: right;
+  margin-right: 36px;
+  margin-top: 0px;
+  font-weight: bold;
+  position: relative;
 }
-.backgroud-1 {
-    background-color: #0081ff;
+
+.content{
+  border: 5px solid black;
+  width: 90%;
+  height: auto;
+  margin: 2.5%;
+  color: black
+  font-size: 25px;
+  padding: 2%;
+  padding-top: 55px;
+  background-color: rgba(0,0,0,0.3);
 }
-.backgroud-2 {
-    background-color: #00ff4b;
+
+.name1{
+  background-color: #FFB6C1;
 }
-.backgroud-3 {
-    background-color: #ff0062;
-    color: #ffffff;
+
+.name2{
+  color: white;
+  background-color: #FF0000;
 }
-.p-section {
-    height: 250px;
-    background-color: #3e2723;
-    border: 1px solid black;
-    margin-bottom: 30px;
-    position: relative;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+.name3{
+  background-color: #FFFF00;
 }
-/*
-!**************** Desktop *******************!
+
+
+/********** Large devices only **********/
 @media (min-width: 992px) {
-
+  .col-lg-4 {
+  	float: left;
+    width: 33.33%;
+  }
 }
-!**************** Tablet *******************!
+/********** Medium devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
-
+  .col-md-6,.col-md-12 {
+    float: left;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-12 {
+    margin-left: -10px;
+    width: 100%;
+  }
+  .name3{
+    margin-right: 65px;
+    width: 100px;
+  }
 }
-!**************** Mobile *******************!
-@media (max-width: 767px) {
 
-}
-*/
-  color: black; /* Black text for content */
+@media (min-width: 0px) and (max-width: 767px) {
+  .col-sm-12 {
+  	float: left;
+    width: 100%;
+  }
+  .content-name{
+    margin-right: 30px;
+  }
 }
