--- a/mod2_solution/module2-solution/css/style.css
+++ b/mod2_solution/module2-solution/css/style.css
@@ -1,103 +1,54 @@
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-body{
-	margin: 0;
-	padding: 0;
-  font-family: "Comic Sans MS", cursive, sans-serif;
-}
-
-.row{
-  margin-top: 5%;
-  margin-bottom: 5%;
+.container {
+    width: 80%; /* Adjust width as needed */
+    margin: auto;
+    overflow: auto;
+    padding: 20px;
 }
 
 h1 {
-  margin-bottom: 15px;
-  text-align: center;
-  color: #ff4532;
-  font-size: 50px;
+    text-align: center;
+    margin-bottom: 30px;
 }
 
-
-.box{
-  width: 100%;
-  overflow: none;
+.menu-section {
+    border: 1px solid black;
+    background-color: #f3f3f3; /* Light grey background for content area */
+    margin-bottom: 20px;
+    padding: 20px;
+    position: relative;
 }
 
-
-.content-name{
-  overflow: none;
-  text-align: center;
-  border: 4px solid black;
-  width: 100px;
-  height: 40px;
-  padding: 5px;
-  float: right;
-  margin-right: 36px;
-  margin-top: 0px;
-  font-weight: bold;
-  position: relative;
+.menu-title {
+    padding: 5px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    border: 1px solid black;
 }
 
-.content{
-  border: 5px solid black;
-  width: 90%;
-  height: auto;
-  margin: 2.5%;
-  color: black
-  font-size: 25px;
-  padding: 2%;
-  padding-top: 55px;
-  background-color: rgba(0,0,0,0.3);
+/* Specific styles for each menu title */
+.chicken .menu-title {
+    background-color: #ffc0cb; /* Light pink background */
+    color: black;
 }
 
-.name1{
-  background-color: #FFB6C1;
+.beef .menu-title {
+    background-color: #ff0000; /* Red background */
+    color: white;
 }
 
-.name2{
-  color: white;
-  background-color: #FF0000;
-}
-.name3{
-  background-color: #FFFF00;
+.sushi .menu-title {
+    background-color: #ffff99; /* Light yellow background */
+    color: black;
 }
 
-
-/********** Large devices only **********/
-@media (min-width: 992px) {
-  .col-lg-4 {
-  	float: left;
-    width: 33.33%;
-  }
-}
-/********** Medium devices only **********/
-@media (min-width: 768px) and (max-width: 991px) {
-  .col-md-6,.col-md-12 {
-    float: left;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-12 {
-    margin-left: -10px;
-    width: 100%;
-  }
-  .name3{
-    margin-right: 65px;
-    width: 100px;
-  }
-}
-
-@media (min-width: 0px) and (max-width: 767px) {
-  .col-sm-12 {
-  	float: left;
-    width: 100%;
-  }
-  .content-name{
-    margin-right: 30px;
-  }
+p {
+    color: black; /* Text color for the content */
 }
