--- a/mod2_solution/module2-solution/css/style.css
+++ b/mod2_solution/module2-solution/css/style.css
@@ -1,54 +1,125 @@
+/*basic style*/
+    * {
+        box-sizing: border-box;
+    }
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+    body {
+        background-color: white;
+    }
 
-.container {
-    width: 80%; /* Adjust width as needed */
-    margin: auto;
-    overflow: auto;
-    padding: 20px;
-}
-
-h1 {
+    h1 {
+       margin-bottom: 15px;
     text-align: center;
-    margin-bottom: 30px;
-}
+    color: #ff4532;
+    font-size: 50px;
+    }
 
-.menu-section {
-    border: 1px solid black;
-    background-color: #f3f3f3; /* Light grey background for content area */
-    margin-bottom: 20px;
-    padding: 20px;
-    position: relative;
-}
+    section {
+        position: relative;
+        padding: 15px;
+        width: 90%;
+    }
 
-.menu-title {
-    padding: 5px;
-    position: absolute;
-    right: 0;
-    top: 0;
-    border: 1px solid black;
-}
+    p {
+        position: relative;
+        clear: right;
+    }
 
-/* Specific styles for each menu title */
-.chicken .menu-title {
-    background-color: #ffc0cb; /* Light pink background */
-    color: black;
-}
+    div {
+        position: relative;
+        background-color: gray;
+        border: 3.5px solid black;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: auto;
+    }
 
-.beef .menu-title {
-    background-color: #ff0000; /* Red background */
-    color: white;
-}
+    .sub1 {
+        float: right;
+        width: 100px;
+        padding: 5px;
+        margin: -3px -3px 0px;
+        border: 3.5px solid black;
+        text-align: center;
+        font-size: 125%;
+        font-weight: bold;
+        background-color: #FFB6C1;
 
-.sushi .menu-title {
-    background-color: #ffff99; /* Light yellow background */
-    color: black;
-}
+    }
 
-p {
-    color: black; /* Text color for the content */
-}
+    .sub2 {
+        float: right;
+        color: white;
+        width: 100px;
+        padding: 5px;
+        margin: -3px -3px 0px;
+        border: 3.5px solid black;
+        text-align: center;
+        font-size: 125%;
+        font-weight: bold;
+        background-color: #FF0000;
+
+    }
+
+    .sub3 {
+        color: black;
+        float: right;
+        width: 100px;
+        padding: 5px;
+         margin: -3px -3px 0px;
+        border: 3.5px solid black;
+        text-align: center;
+        font-size: 125%;
+        font-weight: bold;
+        background-color: rgb(223, 212, 121);
+
+    }
+
+    .content {
+        padding: 5px;
+        border: none;
+        background-color: gray;
+        font-family: Helvetica;
+        color: black;
+        margin: 3px ;
+        height: 150px;
+        overflow: auto;
+    }
+
+    .row {
+        width: 90%;
+    }
+
+    /*desktop version*/
+    @media (min-width: 992px) {
+        .column-lg-4 {
+            float: left;
+            width: 33.33%;
+        }
+    }
+
+    /*tablet version*/
+    @media (min-width: 768px) and (max-width: 991px) {
+        .colmn-md-6 {
+            float: left;
+            width: 50%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .colmn-md-12 {
+            float: left;
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+
+    /*mobile version*/
+    @media (max-width: 767px) {
+        .colmn-sm-12 {
+            float: left;
+            width: 100%;
+        }
+    }
